# lab.voulezvous.tv

./: .gitignore  ADR-001.md  ADR-002-github-projects.md  Blueprint-voulezvous-tv  CONTEXT_REGISTRY.md  CONTEXT_RUST_WORKSPACE.md  CONTEXT_VOULEZVOUS_TV.md  Cargo.toml  GITHUB_PROJECTS_SETUP.md  Makefile  README.md
.github/: QUICKSTART.md  SECRETS.md
.github/ISSUE_TEMPLATE/: mission-control.yml
.github/workflows/: add-to-project.yml
apps/vvtv-ledger-svc/: Cargo.toml  README.md
apps/vvtv-ledger-svc/src/: ledger.rs  main.rs  types.rs
apps/vvtv-ledger-svc/tests/: pod.sh
configs/: business_logic.yaml  llm.toml  sources.yaml
infra/cloudflare/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infra/cloudflare/envs/: prod.tfvars  staging.tfvars
infra/lab/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infra/lab/files/: env.lab.tmpl  launchd.ollama.plist.tmpl  launchd.vvtv-runner.plist.tmpl
infra/lab/files/scripts/: install_tools.sh  seed_models_ollama.sh  smoke_r2.sh  start_minio.sh
infra/lab/vars/: lab512.tfvars
infra/modules/: README.md
scripts/: setup-github-project.sh  setup-with-app.sh
