[workspace]
resolver = "2"
members = [
    "apps/office-agentd",
    "apps/vv-fetcherd",
    "apps/vv-prefetchd",
    "apps/vv-qcd",
    "apps/vv-plannerd",
    "apps/vv-queue",
    "apps/vv-broadcastd",
    "apps/ubl-ledgerd",
    "apps/indexer-lllv",
    "apps/mcp-hub",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["danvoulez <dan@logline.foundation>"]
rust-version = "1.75"

[workspace.dependencies]
# LogLine ecosystem (from crates.io/users/danvoulez)
json_atomic = "0.1.1"
logline-core = "0.1.1"
lllv-core = "0.1.1"
lllv-index = "0.1.1"
tdln-ast = "0.1.1"
tdln-compiler = "0.1.1"
tdln-gate = "0.1.1"
tdln-proof = "0.1.1"
tdln-brain = "0.2.0"

# UBL family (verificar versões disponíveis)
# ubl-types = "0.3"
# ubl-codec = "0.3"
# ubl-crypto = "0.3"
# ubl-ledger = "0.3"
# ubl-runtime = "0.3"
# ubl-sirp = "0.3"
# ubl-office = "0.3"
# ubl-mcp = "0.2"

# Standard ecosystem
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# HTTP & async
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Configuration
config = "0.14"
toml = "0.8"
serde_yaml = "0.9"

# Video processing (FFmpeg)
ffmpeg-next = "7.1"

# Headless browser (for PBD)
headless_chrome = { version = "1.0", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
