[package]
name = "vvtv-ledger-svc"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# LogLine ecosystem
json_atomic = "0.1.1"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Crypto
blake3 = "1.5"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.14"
toml = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
